# minimum-vertex-cover

./: CMakeLists.txt  Dockerfile  README.md  composeTest  controller.cpp  myResult.txt  s128_final.cpp  s128_hsHrmjb4.cpp  s128_hsHrmjb4io.cpp  s64.cpp  s64_h.cpp  s64_hsHrm.cpp  s64_hsrm.cpp  testBu  testNosimd  testfirst  testsimd
backUp/: controller.h  iter64_test.cpp  opm_test.cpp  s128_hsHrmjb4.cpp  s128_test.cpp  s48_32_nh.cpp  s48_32_nhns.cpp  s64_h.cpp  s64_hs.cpp  s64_hsHrm2.cpp  s64_hsHrmjb4.cpp  s64_hsHrmpq.cpp  s64_hsrm.cpp  s64_sf.cpp
output/: grid-6-7.out  ring-100-100-2.out  ring-100-100.out  ring-60-60-2222.out  ring-60-60.out
